<resources>
    <string name="action_asset_buy">Register asset purchase</string>
    <string name="action_asset_buy_short">B</string>
    <string name="action_asset_sell">Register asset sale</string>
    <string name="action_asset_sell_short">S</string>
    <string name="action_asset_dividend">Register stock dividend</string>
    <string name="action_asset_dividend_short">D</string>
    <string name="action_clear">Clear</string>
    <string name="action_close">Close</string>
    <string name="action_configure_stock_retrieval_intervals">Automatic stock update schedule</string>
    <string name="action_cryptocurrencies_supported">Supported cryptocurrencies</string>
    <string name="action_delete">Delete</string>
    <string name="action_note_add">Add note</string>
    <string name="action_note_edit">Edit note</string>
    <string name="action_portfolio_add">Add portfolio</string>
    <string name="action_portfolio_delete">Delete portfolio</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_save">Save</string>
    <string name="action_install">Install</string>
    <string name="action_stock_add_dividend">Register dividend</string>
    <string name="action_stock_add_split">Register stock split</string>
    <string name="action_stocks_supported">Supported stocks</string>
    <string name="app_name">Crom Fortune</string>
    <string name="asset_transaction_asset">Asset</string>
    <string name="asset_transaction_asset_type">Asset type</string>
    <string name="asset_transaction_confirm_buy">Buy</string>
    <string name="asset_transaction_confirm_sell">Sell</string>
    <string name="asset_transaction_confirm_dividend">Dividend</string>
    <string name="asset_transaction_price">Price</string>
    <string name="asset_transaction_quantity_hint">Up to %1$d decimal places</string>
    <string name="asset_transaction_title_buy">Buy asset</string>
    <string name="asset_transaction_title_sell">Sell asset</string>
    <string name="asset_transaction_title_dividend">Register dividend</string>
    <string name="asset_transaction_title_edit">Edit transaction</string>
    <string name="asset_transaction_unit_price">Unit price</string>
    <string name="asset_transaction_ex_date">Ex-dividend date (Day X)</string>
    <string name="asset_transaction_dividend_per_share">Dividend per share</string>
    <string name="asset_transaction_shares_held_on_ex_date">Shares held the day before Ex-date: %1$s</string>
    <string name="generic_error_no_shares_on_day_x">No shares were held at the end of the day before Ex-date.</string>
    <string name="asset_type_crypto">Cryptocurrency</string>
    <string name="asset_type_stock">Stock</string>

    <string name="dashboard_title">Dashboard</string>
    <plurals name="dashboard_croms_will_message">
        <item quantity="zero">You don\'t follow the will of Crom at all!</item>
        <item quantity="one">You follow the will of Crom to the extent of a single percent</item>
        <item quantity="other">You follow the will of Crom to the extent of %1$s\%%</item>
    </plurals>
    <string name="generic_acquisition_value">Acquisition value</string>
    <string name="generic_commission_fee">Commission fee</string>
    <string name="generic_date">Date</string>
    <string name="generic_dialog_title_are_you_sure">Are you sure?</string>
    <string name="generic_error_empty">Enter a value.</string>
    <string name="generic_error_invalid_date">Enter a valid date.</string>
    <string name="generic_error_invalid_currency_symbol">Enter a valid currency symbol.</string>
    <string name="generic_error_invalid_number">Enter a valid number.</string>
    <string name="generic_error_invalid_stock_symbol">Enter a valid stock symbol.</string>
    <string name="generic_error_invalid_time_interval">Invalid time interval.</string>
    <string name="generic_error_invalid_quantity">Enter a valid quantity.</string>
    <string name="generic_error_network">Network error. Please check your connection.</string>
    <string name="generic_error_not_supported">This feature is not yet supported.</string>
    <string name="generic_hint">Select</string>
    <string name="generic_price_per_stock">Unit price</string>
    <string name="generic_portfolio_x">Portfolio: %1$s</string>
    <string name="generic_profit">Value change</string>
    <string name="generic_saved">Saved successfully</string>
    <string name="generic_time_start_label">From</string>
    <string name="generic_time_end_label">Until</string>
    <string name="generic_title_latest">Latest</string>
    <string name="generic_title_name">Name</string>
    <string name="generic_title_quantity">Qty</string>
    <string name="generic_title_stock_orders">Transactions</string>
    <string name="generic_title_total_cost">Total</string>
    <string name="generic_title_total">Total</string>
    <string name="generic_to_do">To do</string>
    <string name="generic_update_completed">An update has just been downloaded.</string>
    <string name="generic_urge_buy">Buy %1$s!</string>
    <string name="generic_urge_sell">Sell %1$s!</string>

    <string name="home_add_commission_fee_label">Commission fee (in SEK)</string>
    <string name="home_add_split_reverse">Reverse split</string>
    <string name="action_stock_edit_split">Edit stock split</string>
    <string name="home_stock_split">%1$s split × %2$d</string>
    <string name="home_stock_reverse_split">%1$s reverse split ÷ %2$d</string>
    <string name="home_add_split_message">Add one stock split at a time.</string>
    <string name="home_add_stock_currency_label">Currency</string>
    <string name="home_add_stock_date_label">Date</string>
    <string name="home_add_stock_name_label">Name</string>
    <string name="home_add_stock_quantity_label">Quantity</string>
    <string name="home_add_stock_message">Add one purchase order at a time.</string>
    <string name="home_delete_stock_order">This will delete the transaction for the following date %1$s.</string>
    <string name="home_delete_all_stock_orders">This will delete all transactions for the following stock: %1$s.</string>
    <string name="home_delete_portfolio">This will permanently delete the portfolio %1$s and all of its transactions.</string>
    <string name="home_information_data_refreshed">The app is now refreshed with the latest rates. Automatic updates follow the interval selected in Settings.</string>
    <string name="home_remove_commission_fee_label">Commission fee (in SEK)</string>
    <string name="home_remove_stock_currency_label">Currency</string>
    <string name="home_remove_stock_date_label">Date</string>
    <string name="home_remove_stock_name_label">Name</string>
    <string name="home_remove_stock_quantity_error_insufficient">You don\'t have this much.</string>
    <string name="home_remove_stock_quantity_label">Quantity</string>
    <string name="home_remove_stock_message">Add one sale order at a time.</string>
    <string name="home_no_stocks">Add your first stock to get filthy rich!</string>
    <string name="home_sort_alphabetical_down">A-Z</string>
    <string name="home_sort_alphabetical_up">Z-A</string>
    <string name="home_sort_profit_up">Best profit</string>
    <string name="home_sort_profit_down">Worst profit</string>
    <string name="home_stocks">You have added stocks. Not shown (not yet implemented).</string>
    <string name="home_stocks_personal_title">Yours</string>
    <string name="home_stocks_crom_title">Croms</string>
    <string name="home_title">Home</string>
    <string name="transactions_title">Transactions</string>
    <string name="transactions_empty">There are no transactions.</string>
    <string name="home_last_updated">Updated %1$s</string>
    <string name="home_last_updated_with_failures">Updated %1$s (%2$d failed)</string>
    <string name="home_updating">Updating…</string>
    <string name="home_update_failed">Update failed</string>
    <string name="home_update_failed_with_last_success">Update failed · Last updated %1$s</string>
    <string name="home_not_updated">Update</string>
    <string name="home_buy">Buy</string>
    <string name="home_sell">Sell</string>
    <string name="home_dividend">Dividend</string>
    <string name="home_total_dividends">Dividends: %1$s</string>
    <string name="home_acquisition_price">GAV</string>
    <string name="home_realized_profit">Return</string>
    <string name="home_realized_profit_format">Return: %1$s</string>
    <string name="home_quantity">Quantity</string>
    <string name="home_portfolio_profit">Portfolio profit</string>
    <string name="home_cash_balance">Cash: %1$s</string>
    <string name="home_asset_logo">%1$s logo</string>
    <string name="home_sort">Sort</string>
    <string name="note_add_title">Add note</string>
    <string name="note_edit_title">Edit note</string>
    <string name="note_label">Note</string>

    <string name="notification_channel_name">Crom Fortune Events</string>
    <string name="notification_recommendation_body_buy">%1$s is recommended to buy %2$d of %3$s at %4$s %5$s (commission fee %6$d SEK)</string>
    <string name="notification_recommendation_body_sell">%1$s is recommended to sell %2$d of %3$s at %4$s %5$s (commission fee %6$d SEK)</string>
    <string name="notification_recommendation_title">Recommendation</string>
    <string name="notifications_old_title">Old Notifications</string>
    <string name="notifications_new_title">Current Notifications</string>
    <string name="notifications_empty">There are no notifications</string>
    <string name="notifications_title">Notifications</string>

    <string name="recommendations_none">No recommendations</string>

    <string name="navigation_settings">Settings</string>
    <string name="settings_dialog_time_intervals_title">Automatic updates</string>
    <string name="settings_dialog_time_intervals_description">Choose the update frequency. The schedule below applies to stocks; crypto updates around the clock.</string>
    <string name="settings_dialog_refresh_interval_label">Update frequency</string>
    <string name="refresh_interval_15_minutes">Every 15 minutes</string>
    <string name="refresh_interval_30_minutes">Every 30 minutes</string>
    <string name="refresh_interval_1_hour">Every hour</string>
    <string name="refresh_interval_3_hours">Every 3 hours</string>
    <string name="refresh_interval_6_hours">Every 6 hours</string>
    <string name="refresh_interval_12_hours">Every 12 hours</string>
    <string name="settings_dialog_weekdays_label">Days</string>
    <string name="action_about">About the app</string>
    <string name="about_app_tagline">A clearer view of your financial journey</string>
    <string name="about_app_version">Version %1$s</string>
    <string name="about_app_created_by">Created with care by\nAlix Émile Warnké</string>
    <string name="about_app_logo_description">Crom Fortune app logo</string>

</resources>
