<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout_dialogAddStockSplit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_dialogAddStockSplit_dateInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/home_add_stock_date_label"
            app:errorEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

        <EditText
                android:id="@+id/editText_dialogAddStockSplit_dateInput"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="date"
                />

        <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchMaterial_dialogAddStockSplit_reverseEnabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home_add_split_reverse"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_dialogAddStockSplit_currencyInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/home_add_stock_currency_label"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_dialogAddStockSplit_quantityInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/generic_title_quantity"
            app:errorEnabled="true"
            app:layout_constraintStart_toStartOf="@id/textInputLayout_dialogAddStockSplit_dateInput"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_dialogAddStockSplit_dateInput"
            >

        <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView_dialogAddStockSplit_quantityInput"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="numberSigned"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_dialogAddStockSplit_nameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/home_add_stock_name_label"
            app:errorEnabled="true"
            app:layout_constraintStart_toStartOf="@id/textInputLayout_dialogAddStockSplit_quantityInput"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_dialogAddStockSplit_quantityInput"
            >

        <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView_dialogAddStockSplit_nameInput"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textAutoComplete|textAutoCorrect"
                />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
